--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name"    : "tv_tracker",
-  "version" : "0.0.1",
-  "main"    : "main.js",
-  "scripts" : {
+  "name": "tv_tracker",
+  "version": "0.0.1",
+  "main": "main.js",
+  "scripts": {
     "start": "electron ."
+  },
+  "dependencies": {
+    "electron-json-storage": "^3.0.5",
+    "fs": "0.0.1-security",
+    "urllib": "^2.22.0"
   }
 }
